fix slight image shift

--- a/styles.css
+++ b/styles.css
@@ -46,7 +46,6 @@ ul {
   height: 150px;
   border-radius: 50%;
   object-fit: cover;
-  margin-right: 1rem;
   margin-bottom: 1rem;
 }
 
